--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,13 @@
-name: "SonarQube Security Code Scanning"
 on:
-  workflow_dispatch
+  # Trigger analysis when pushing in master or pull requests, and when creating
+  # a pull request. 
+  push:
+    branches:
+      - main
+  pull_request:
+      types: [opened, synchronize, reopened]
 
+name: "SonarQube Security Code Scanning"
 jobs:
   sonarqube-job:
     name: Scan code
