--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   # a pull request. 
   push:
     branches:
-      - master
+      - main
   pull_request:
       types: [opened, synchronize, reopened]
 
@@ -21,7 +21,7 @@ jobs:
         sonar_username: "admin"
         sonar_password: "admin"
         slack_token: ${{ secrets.SLACK_BOT_TOKEN }}
-        slack_channel: "C134554U6Ni"
+        slack_channel: "C0390TN4CK1"
 
     services:
       sonarqube:
